--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -58,7 +58,7 @@
                 });
             });
             
-            var title = document.getElementById('title').innerHTML;
+            var title = document.getElementById('title').textContent;
             if (title == "Appetizers &amp; Snacks")
             {
                 document.getElementById('appetizers-and-snacks').setAttribute("class", "active");
