--- a/views/partials/menubar.hbs
+++ b/views/partials/menubar.hbs
@@ -25,7 +25,7 @@
 </nav>
 
 <script>
-    var pagename = document.getElementById('page-name').innerHTML;
+    var pagename = document.getElementById('page-name').textContent;
         if (pagename == "Home")
         {
             document.getElementById('home').setAttribute("class", "active");
